## Packaging for the Atlas MCP server (atlas_mcp/) only.
##
## This lets end users run the MCP server locally on their own machine with no
## manual install step, e.g.:
##
##   uvx --from git+https://github.com/Watts-Lab/atlas.git atlas-mcp
##
## Local (stdio) mode is what enables the `add_paper` tool to upload PDFs from
## the user's own disk — the hosted /mcp endpoint cannot receive files because
## MCP tool arguments are JSON only. The server/ and client/ apps are not part
## of this package; they ship via their own Dockerfiles.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-mcp"
version = "0.1.0"
description = "MCP server for Atlas — systematic literature review assistant"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.27.0",
]

[project.scripts]
atlas-mcp = "atlas_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["atlas_mcp"]
